test/negative/405_when_nonbool.fx
// expect: bool
val x = match 5 { | a when a => 1 | _ => 0 }
println(x)
